litmask/tests/compile/mask_format_duplicate_named_arg.stderr
error: duplicate named argument `x` in mask_format! (each name may appear at most once)
  --> tests/compile/mask_format_duplicate_named_arg.rs:10:40
   |
10 |     let _ = mask_format!("{x}", x = 1, x = 2);
   |                                        ^
